fixed text align

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -416,6 +416,7 @@ p {
   font-size: var(--font-h1);
   font-weight: var(--weight-bold);
   line-height: 1em;
+  text-align: center;
   text-transform: uppercase;
   letter-spacing: 16px;
   padding-inline-start: 16px;
